--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,22 +13,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-07 Fri 23:05]
+#+CAPTION: Clock summary at [2016-10-07 Fri 23:59]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *85:34* |       |       | 100.0 |
+| *Total time*                                                                | *86:26* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 85:34   |       |       | 100.0 |
-| Active                                                                      |         | 85:34 |       | 100.0 |
+| Stories                                                                     | 86:26   |       |       | 100.0 |
+| Active                                                                      |         | 86:26 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  5:30 |   6.4 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:07 |   0.1 |
 | COMPLETED Generation of formattable is incorrect                            |         |       |  2:30 |   2.9 |
 | COMPLETED Visitor includes are incorrect                                    |         |       |  0:20 |   0.4 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       |  1:46 |   2.1 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       |  1:46 |   2.0 |
 | COMPLETED Add reducer to quilt.cpp                                          |         |       |  0:22 |   0.4 |
 | COMPLETED Add new index to formtter container                               |         |       |  0:19 |   0.4 |
-| COMPLETED Add path expander to quilt.cpp                                    |         |       |  0:49 |   1.0 |
+| COMPLETED Add path expander to quilt.cpp                                    |         |       |  0:49 |   0.9 |
 | COMPLETED Add guard expander to quilt.cpp                                   |         |       |  0:27 |   0.5 |
 | COMPLETED Investigate borked travis build                                   |         |       |  0:37 |   0.7 |
 | COMPLETED Add decoration expander to quilt.cpp                              |         |       |  0:23 |   0.4 |
@@ -43,26 +43,26 @@
 | COMPLETED Hook formattables into formatters                                 |         |       |  3:58 |   4.6 |
 | COMPLETED Remove empty context                                              |         |       |  1:09 |   1.3 |
 | COMPLETED Review main classes in quilt.cpp                                  |         |       |  3:42 |   4.3 |
-| COMPLETED Clean up element segmentation                                     |         |       |  1:20 |   1.6 |
-| COMPLETED Get OSX build to compile code                                     |         |       |  7:05 |   8.3 |
+| COMPLETED Clean up element segmentation                                     |         |       |  1:20 |   1.5 |
+| COMPLETED Get OSX build to compile code                                     |         |       |  7:05 |   8.2 |
 | COMPLETED Add a banner to readme                                            |         |       |  1:29 |   1.7 |
 | COMPLETED Remove formatter group                                            |         |       |  0:23 |   0.4 |
 | COMPLETED Add more types to =quilt::cpp= canned tests                       |         |       |  0:15 |   0.3 |
 | CANCELLED Remove formatter id                                               |         |       |  0:04 |   0.1 |
-| COMPLETED Analysis around terminology in formatting space                   |         |       |  3:24 |   4.0 |
+| COMPLETED Analysis around terminology in formatting space                   |         |       |  3:24 |   3.9 |
 | COMPLETED Remove =original_model_name=                                      |         |       |  0:16 |   0.3 |
 | COMPLETED Refactor code around model origination                            |         |       |  4:08 |   4.8 |
 | COMPLETED Remove formatter level facet folders                              |         |       |  0:06 |   0.1 |
 | COMPLETED Consider removing the "fake" primitive formatters                 |         |       |  0:01 |   0.0 |
-| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       |  3:03 |   3.6 |
+| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       |  3:03 |   3.5 |
 | COMPLETED Create the notion of a formatter alias                            |         |       |  3:15 |   3.8 |
 | COMPLETED Remove enabled formatters from formatter configuration            |         |       |  0:22 |   0.4 |
 | COMPLETED Handle registration of services properly                          |         |       |  3:41 |   4.3 |
 | COMPLETED Move stereotypes to element                                       |         |       |  0:21 |   0.4 |
 | COMPLETED Improve project banner                                            |         |       |  0:32 |   0.6 |
-| CANCELLED Add support for profiles                                          |         |       | 10:40 |  12.5 |
-| COMPLETED Refactor =yarn.dia= transformer                                   |         |       |  8:49 |  10.3 |
-| STARTED Create a dynamic expander in yarn                                   |         |       |  4:41 |   5.5 |
+| CANCELLED Add support for profiles                                          |         |       | 10:40 |  12.3 |
+| COMPLETED Refactor =yarn.dia= transformer                                   |         |       |  8:49 |  10.2 |
+| STARTED Create a dynamic expander in yarn                                   |         |       |  5:33 |   6.4 |
 | STARTED Rewrite profile support                                             |         |       |  1:26 |   1.7 |
 | STARTED Generate formatter interfaces                                       |         |       |  0:28 |   0.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
@@ -1289,6 +1289,7 @@ mind we are traversing a graph, so this would have to be done in the
 graph itself - not ideal. This story needs more thinking.
 
 *** STARTED Create a dynamic expander in yarn                         :story:
+    CLOCK: [2016-10-07 Fri 23:06]--[2016-10-07 Fri 23:58] =>  0:52
     CLOCK: [2016-10-07 Fri 23:01]--[2016-10-07 Fri 23:05] =>  0:04
     CLOCK: [2016-10-07 Fri 22:20]--[2016-10-07 Fri 23:00] =>  0:40
     CLOCK: [2016-10-07 Fri 18:44]--[2016-10-07 Fri 19:01] =>  0:17
