--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,17 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-08 Sat 00:19]
+#+CAPTION: Clock summary at [2016-10-08 Sat 10:43]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *86:45* |       |       | 100.0 |
+| *Total time*                                                                | *87:54* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 86:45   |       |       | 100.0 |
-| Active                                                                      |         | 86:45 |       | 100.0 |
+| Stories                                                                     | 87:54   |       |       | 100.0 |
+| Active                                                                      |         | 87:54 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  5:30 |   6.3 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:07 |   0.1 |
-| COMPLETED Generation of formattable is incorrect                            |         |       |  2:30 |   2.9 |
+| COMPLETED Generation of formattable is incorrect                            |         |       |  2:30 |   2.8 |
 | COMPLETED Visitor includes are incorrect                                    |         |       |  0:20 |   0.4 |
 | COMPLETED Add includer to quilt.cpp                                         |         |       |  1:46 |   2.0 |
 | COMPLETED Add reducer to quilt.cpp                                          |         |       |  0:22 |   0.4 |
@@ -32,26 +32,26 @@
 | COMPLETED Add guard expander to quilt.cpp                                   |         |       |  0:27 |   0.5 |
 | COMPLETED Investigate borked travis build                                   |         |       |  0:37 |   0.7 |
 | COMPLETED Add decoration expander to quilt.cpp                              |         |       |  0:23 |   0.4 |
-| COMPLETED Add aspect expander to quilt.cpp                                  |         |       |  1:26 |   1.7 |
+| COMPLETED Add aspect expander to quilt.cpp                                  |         |       |  1:26 |   1.6 |
 | COMPLETED Run tests that are passing on windows                             |         |       |  0:10 |   0.2 |
-| COMPLETED Add helper expander to quilt.cpp                                  |         |       |  1:26 |   1.7 |
+| COMPLETED Add helper expander to quilt.cpp                                  |         |       |  1:26 |   1.6 |
 | COMPLETED Merge pre and post workflows                                      |         |       |  0:16 |   0.3 |
 | COMPLETED Fix bug in aspect and helper generation                           |         |       |  0:15 |   0.3 |
 | COMPLETED Investigate element annotation support                            |         |       |  2:05 |   2.4 |
 | CANCELLED Add streaming settings expander                                   |         |       |  0:36 |   0.7 |
-| COMPLETED Create the formattables model                                     |         |       |  1:32 |   1.8 |
-| COMPLETED Hook formattables into formatters                                 |         |       |  3:58 |   4.6 |
+| COMPLETED Create the formattables model                                     |         |       |  1:32 |   1.7 |
+| COMPLETED Hook formattables into formatters                                 |         |       |  3:58 |   4.5 |
 | COMPLETED Remove empty context                                              |         |       |  1:09 |   1.3 |
-| COMPLETED Review main classes in quilt.cpp                                  |         |       |  3:42 |   4.3 |
+| COMPLETED Review main classes in quilt.cpp                                  |         |       |  3:42 |   4.2 |
 | COMPLETED Clean up element segmentation                                     |         |       |  1:20 |   1.5 |
-| COMPLETED Get OSX build to compile code                                     |         |       |  7:05 |   8.2 |
+| COMPLETED Get OSX build to compile code                                     |         |       |  7:05 |   8.1 |
 | COMPLETED Add a banner to readme                                            |         |       |  1:29 |   1.7 |
 | COMPLETED Remove formatter group                                            |         |       |  0:23 |   0.4 |
 | COMPLETED Add more types to =quilt::cpp= canned tests                       |         |       |  0:15 |   0.3 |
 | CANCELLED Remove formatter id                                               |         |       |  0:04 |   0.1 |
 | COMPLETED Analysis around terminology in formatting space                   |         |       |  3:24 |   3.9 |
 | COMPLETED Remove =original_model_name=                                      |         |       |  0:16 |   0.3 |
-| COMPLETED Refactor code around model origination                            |         |       |  4:08 |   4.8 |
+| COMPLETED Refactor code around model origination                            |         |       |  4:08 |   4.7 |
 | COMPLETED Remove formatter level facet folders                              |         |       |  0:06 |   0.1 |
 | COMPLETED Consider removing the "fake" primitive formatters                 |         |       |  0:01 |   0.0 |
 | COMPLETED Expander refactor in =quilt.cpp=                                  |         |       |  3:03 |   3.5 |
@@ -60,10 +60,12 @@
 | COMPLETED Handle registration of services properly                          |         |       |  3:41 |   4.2 |
 | COMPLETED Move stereotypes to element                                       |         |       |  0:21 |   0.4 |
 | COMPLETED Improve project banner                                            |         |       |  0:32 |   0.6 |
-| CANCELLED Add support for profiles                                          |         |       | 10:40 |  12.3 |
-| COMPLETED Refactor =yarn.dia= transformer                                   |         |       |  8:49 |  10.2 |
-| COMPLETED Create a dynamic expander in yarn                                 |         |       |  5:52 |   6.8 |
-| STARTED Rewrite profile support                                             |         |       |  1:26 |   1.7 |
+| CANCELLED Add support for profiles                                          |         |       | 10:40 |  12.1 |
+| COMPLETED Refactor =yarn.dia= transformer                                   |         |       |  8:49 |  10.0 |
+| COMPLETED Create a dynamic expander in yarn                                 |         |       |  5:52 |   6.7 |
+| STARTED Merge annotations with formattables                                 |         |       |  0:02 |   0.0 |
+| STARTED Clean up terminology in dynamic                                     |         |       |  1:07 |   1.3 |
+| STARTED Rewrite profile support                                             |         |       |  1:26 |   1.6 |
 | STARTED Generate formatter interfaces                                       |         |       |  0:28 |   0.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -1325,7 +1327,38 @@ Tasks:
   the root object name) and return all dynamic objects against the
   element id.
 
-*** Clean up terminology in dynamic                                   :story:
+*** STARTED Merge annotations with formattables                       :story:
+    CLOCK: [2016-10-08 Sat 10:41]--[2016-10-08 Sat 10:43] =>  0:02
+
+Originally we split annotations from formattables because we thought
+they had enough responsibilities to stand on their own as
+classes. However, its now clear that the only job of the annotations
+is to provide data for one expander. It makes a lot more sense to have
+it all in one class.
+
+Tasks:
+
+- merge path annotations with model expander
+- create separate annotations for facet directory expander
+- merge streaming annotations and helper annotations with helper
+  expander
+- merge inclusion directive annotations with inclusion expander and
+  possibly get rid of factory
+- merge aspect annotations with aspect expander
+- merge opaque annotations with opaque annotations expander and move
+  all other opaque classes into formattables
+- delete annotations namespace.
+
+*** Drop annotations prefix in yarn                                   :story:
+
+Tasks:
+
+- merge traits into each factory;
+- do not use the name annotations - just drop the prefix.
+
+*** STARTED Clean up terminology in dynamic                           :story:
+    CLOCK: [2016-10-08 Sat 10:30]--[2016-10-08 Sat 10:41] =>  0:11
+    CLOCK: [2016-10-08 Sat 08:20]--[2016-10-08 Sat 09:16] =>  0:56
 
 We have to do a number of renames to make space for profilers:
 
@@ -1339,6 +1372,33 @@ We have to do a number of renames to make space for profilers:
 - repository is field definition repository
 - repository factory should be merged into field definition factory
 - repository selector is field definition selector
+
+Actually this rename is a bit more profound than we originally
+anticipated. The objective of dynamic is to provide a way to annotate
+objects in yarn (well, anywhere in theory). Interpreting some
+[[https://en.wikipedia.org/wiki/Text_annotation][annotation terminology]] fairly liberally we have:
+
+- fields folder renamed to annotations.
+- dynamic -> annotations
+- object -> annotation. The marker for the annotation is the linkage
+  between the annotation and the yarn element it annotates. Fields
+  become the body of the annotation.
+- field instance -> entry.
+- field instance definition -> entry template.
+- field definition -> split into type and type template. JSON file can
+  contain both. Add some kind of meta-data to figure out the type.
+- field definition types: template types
+- json_hydrator -> type_hydrator
+- repository ->  type_repository
+- repository workflow: merge repository factory, repository workflow,
+  hydration workflow into a type repository factory.
+- raw aggregate: scribbles, scribble group?
+- object aggregate: annotation group (and top level container
+  annotation groups). In annotation group we have parent and
+  children. Also add a flag for is master/root.
+- scopes: remove unused scopes. Rest of the scopes should be root,
+  top-level, child (avoid references to yarn concepts).
+- workflow: annotation groups factory. Takes in scribble groups.
 
 *** STARTED Rewrite profile support                                   :story:
     CLOCK: [2016-10-06 Thu 10:20]--[2016-10-06 Thu 11:30] =>  1:10
@@ -1363,15 +1423,6 @@ Tasks:
 - we need to supply a list of stereotypes to dynamic workflow, against
   the id's that have them. If we can find a profile with the
   stereotype name, apply it.
-
-*** Finish overwriting support                                        :story:
-
-With profiles we have all the pieces in place to support overwrites,
-but there is some linkage missing:
-
-- global/local configuration needs to have an overwrite flag;
-- need to populate formatter configuration on the back of that;
-- need to read flag from formatter configuration and set it on file.
 
 *** STARTED Generate formatter interfaces                              :epic:
     CLOCK: [2016-10-04 Tue 18:56]--[2016-10-04 Tue 19:05] =>  0:09
@@ -1519,6 +1570,15 @@ them.
 
 This was missed in rename.
 
+*** Finish overwriting support                                        :story:
+
+With profiles we have all the pieces in place to support overwrites,
+but there is some linkage missing:
+
+- global/local configuration needs to have an overwrite flag;
+- need to populate formatter configuration on the back of that;
+- need to read flag from formatter configuration and set it on file.
+
 *** Push stereotypes processing into yarn                             :story:
 
 At present we have stereotypes as an enum, and the frontends are
@@ -1537,8 +1597,8 @@ The right thing is:
 - *all* stereotypes are put in the container; rule of thumb is, if its
   a UML stereotype then it must go in the container;
 - stereotypes expander figures out if the stereotype is one that is
-  actionable within yarn (visitor, modeled concepts) or one to
-  pass-through (binding stereotypes).
+  actionable within yarn (immutable, visitor, modeled concepts) or one
+  to pass-through (binding stereotypes).
 - during dynamic expansion, we supply a list of _all_ stereotypes
   against ids. If there is a match, they are used as profiles.
 
@@ -1624,27 +1684,6 @@ Note: we don't need to do leaf management:
 We just need to enable/disable serialisation and the code will work.
 
 - add a stereotype of handcrafted with a default profile.
-
-*** Merge annotations with formattables                               :story:
-
-Originally we split annotations from formattables because we thought
-they had enough responsibilities to stand on their own as
-classes. However, its now clear that the only job of the annotations
-is to provide data for one expander. It makes a lot more sense to have
-it all in one class.
-
-Tasks:
-
-- merge path annotations with model expander
-- create separate annotations for facet directory expander
-- merge streaming annotations and helper annotations with helper
-  expander
-- merge inclusion directive annotations with inclusion expander and
-  possibly get rid of factory
-- merge aspect annotations with aspect expander
-- merge opaque annotations with opaque annotations expander and move
-  all other opaque classes into formattables
-- delete annotations namespace.
 
 *** Remove object types in yarn                                       :story:
 
