--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,15 +13,15 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-08 Sat 10:43]
+#+CAPTION: Clock summary at [2016-10-09 Sun 13:18]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *87:54* |       |       | 100.0 |
+| *Total time*                                                                | *90:27* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 87:54   |       |       | 100.0 |
-| Active                                                                      |         | 87:54 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  5:30 |   6.3 |
+| Stories                                                                     | 90:27   |       |       | 100.0 |
+| Active                                                                      |         | 90:27 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  5:30 |   6.1 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:07 |   0.1 |
 | COMPLETED Generation of formattable is incorrect                            |         |       |  2:30 |   2.8 |
 | COMPLETED Visitor includes are incorrect                                    |         |       |  0:20 |   0.4 |
@@ -37,34 +37,34 @@
 | COMPLETED Add helper expander to quilt.cpp                                  |         |       |  1:26 |   1.6 |
 | COMPLETED Merge pre and post workflows                                      |         |       |  0:16 |   0.3 |
 | COMPLETED Fix bug in aspect and helper generation                           |         |       |  0:15 |   0.3 |
-| COMPLETED Investigate element annotation support                            |         |       |  2:05 |   2.4 |
+| COMPLETED Investigate element annotation support                            |         |       |  2:05 |   2.3 |
 | CANCELLED Add streaming settings expander                                   |         |       |  0:36 |   0.7 |
 | COMPLETED Create the formattables model                                     |         |       |  1:32 |   1.7 |
-| COMPLETED Hook formattables into formatters                                 |         |       |  3:58 |   4.5 |
+| COMPLETED Hook formattables into formatters                                 |         |       |  3:58 |   4.4 |
 | COMPLETED Remove empty context                                              |         |       |  1:09 |   1.3 |
-| COMPLETED Review main classes in quilt.cpp                                  |         |       |  3:42 |   4.2 |
+| COMPLETED Review main classes in quilt.cpp                                  |         |       |  3:42 |   4.1 |
 | COMPLETED Clean up element segmentation                                     |         |       |  1:20 |   1.5 |
-| COMPLETED Get OSX build to compile code                                     |         |       |  7:05 |   8.1 |
-| COMPLETED Add a banner to readme                                            |         |       |  1:29 |   1.7 |
+| COMPLETED Get OSX build to compile code                                     |         |       |  7:05 |   7.8 |
+| COMPLETED Add a banner to readme                                            |         |       |  1:29 |   1.6 |
 | COMPLETED Remove formatter group                                            |         |       |  0:23 |   0.4 |
 | COMPLETED Add more types to =quilt::cpp= canned tests                       |         |       |  0:15 |   0.3 |
 | CANCELLED Remove formatter id                                               |         |       |  0:04 |   0.1 |
-| COMPLETED Analysis around terminology in formatting space                   |         |       |  3:24 |   3.9 |
+| COMPLETED Analysis around terminology in formatting space                   |         |       |  3:24 |   3.8 |
 | COMPLETED Remove =original_model_name=                                      |         |       |  0:16 |   0.3 |
-| COMPLETED Refactor code around model origination                            |         |       |  4:08 |   4.7 |
+| COMPLETED Refactor code around model origination                            |         |       |  4:08 |   4.6 |
 | COMPLETED Remove formatter level facet folders                              |         |       |  0:06 |   0.1 |
 | COMPLETED Consider removing the "fake" primitive formatters                 |         |       |  0:01 |   0.0 |
-| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       |  3:03 |   3.5 |
-| COMPLETED Create the notion of a formatter alias                            |         |       |  3:15 |   3.7 |
+| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       |  3:03 |   3.4 |
+| COMPLETED Create the notion of a formatter alias                            |         |       |  3:15 |   3.6 |
 | COMPLETED Remove enabled formatters from formatter configuration            |         |       |  0:22 |   0.4 |
-| COMPLETED Handle registration of services properly                          |         |       |  3:41 |   4.2 |
+| COMPLETED Handle registration of services properly                          |         |       |  3:41 |   4.1 |
 | COMPLETED Move stereotypes to element                                       |         |       |  0:21 |   0.4 |
 | COMPLETED Improve project banner                                            |         |       |  0:32 |   0.6 |
-| CANCELLED Add support for profiles                                          |         |       | 10:40 |  12.1 |
-| COMPLETED Refactor =yarn.dia= transformer                                   |         |       |  8:49 |  10.0 |
-| COMPLETED Create a dynamic expander in yarn                                 |         |       |  5:52 |   6.7 |
-| STARTED Merge annotations with formattables                                 |         |       |  0:02 |   0.0 |
-| STARTED Clean up terminology in dynamic                                     |         |       |  1:07 |   1.3 |
+| CANCELLED Add support for profiles                                          |         |       | 10:40 |  11.8 |
+| COMPLETED Refactor =yarn.dia= transformer                                   |         |       |  8:49 |   9.7 |
+| COMPLETED Create a dynamic expander in yarn                                 |         |       |  5:52 |   6.5 |
+| STARTED Merge annotations with formattables                                 |         |       |  2:35 |   2.9 |
+| STARTED Clean up terminology in dynamic                                     |         |       |  1:07 |   1.2 |
 | STARTED Rewrite profile support                                             |         |       |  1:26 |   1.6 |
 | STARTED Generate formatter interfaces                                       |         |       |  0:28 |   0.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
@@ -1327,7 +1327,21 @@ Tasks:
   the root object name) and return all dynamic objects against the
   element id.
 
-*** STARTED Merge annotations with formattables                       :story:
+*** Create a streaming configuration expander                         :story:
+
+Tasks:
+
+- create class, move code from workflow into it.
+- move all annotations code into it.
+- make use of container in helper expander.
+- delete streaming annotations, factory etc in annotations.
+
+*** Merge helper annotations with helper expander
+
+- Move code from annotations.
+
+*** STARTED Merge annotations with formattables                        :epic:
+    CLOCK: [2016-10-09 Sun 10:41]--[2016-10-09 Sun 13:14] =>  2:33
     CLOCK: [2016-10-08 Sat 10:41]--[2016-10-08 Sat 10:43] =>  0:02
 
 Originally we split annotations from formattables because we thought
@@ -1355,6 +1369,14 @@ Tasks:
 
 - merge traits into each factory;
 - do not use the name annotations - just drop the prefix.
+
+*** Investigate helper generation in formattables                     :story:
+
+We seem to be generating an helper for every node of every name tree,
+regardless of whether the name needs a helper or not. Intuitively, we
+should check the family and the streaming settings; if both of these
+are empty then there should not be a need for a helper. But maybe
+there is more to it.
 
 *** STARTED Clean up terminology in dynamic                           :story:
     CLOCK: [2016-10-08 Sat 10:30]--[2016-10-08 Sat 10:41] =>  0:11
