--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,21 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-09 Sun 13:18]
+#+CAPTION: Clock summary at [2016-10-09 Sun 16:28]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *90:27* |       |       | 100.0 |
+| *Total time*                                                                | *91:42* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 90:27   |       |       | 100.0 |
-| Active                                                                      |         | 90:27 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  5:30 |   6.1 |
+| Stories                                                                     | 91:42   |       |       | 100.0 |
+| Active                                                                      |         | 91:42 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  5:30 |   6.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:07 |   0.1 |
-| COMPLETED Generation of formattable is incorrect                            |         |       |  2:30 |   2.8 |
+| COMPLETED Generation of formattable is incorrect                            |         |       |  2:30 |   2.7 |
 | COMPLETED Visitor includes are incorrect                                    |         |       |  0:20 |   0.4 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       |  1:46 |   2.0 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       |  1:46 |   1.9 |
 | COMPLETED Add reducer to quilt.cpp                                          |         |       |  0:22 |   0.4 |
-| COMPLETED Add new index to formtter container                               |         |       |  0:19 |   0.4 |
+| COMPLETED Add new index to formtter container                               |         |       |  0:19 |   0.3 |
 | COMPLETED Add path expander to quilt.cpp                                    |         |       |  0:49 |   0.9 |
 | COMPLETED Add guard expander to quilt.cpp                                   |         |       |  0:27 |   0.5 |
 | COMPLETED Investigate borked travis build                                   |         |       |  0:37 |   0.7 |
@@ -40,30 +40,31 @@
 | COMPLETED Investigate element annotation support                            |         |       |  2:05 |   2.3 |
 | CANCELLED Add streaming settings expander                                   |         |       |  0:36 |   0.7 |
 | COMPLETED Create the formattables model                                     |         |       |  1:32 |   1.7 |
-| COMPLETED Hook formattables into formatters                                 |         |       |  3:58 |   4.4 |
+| COMPLETED Hook formattables into formatters                                 |         |       |  3:58 |   4.3 |
 | COMPLETED Remove empty context                                              |         |       |  1:09 |   1.3 |
-| COMPLETED Review main classes in quilt.cpp                                  |         |       |  3:42 |   4.1 |
+| COMPLETED Review main classes in quilt.cpp                                  |         |       |  3:42 |   4.0 |
 | COMPLETED Clean up element segmentation                                     |         |       |  1:20 |   1.5 |
-| COMPLETED Get OSX build to compile code                                     |         |       |  7:05 |   7.8 |
+| COMPLETED Get OSX build to compile code                                     |         |       |  7:05 |   7.7 |
 | COMPLETED Add a banner to readme                                            |         |       |  1:29 |   1.6 |
 | COMPLETED Remove formatter group                                            |         |       |  0:23 |   0.4 |
 | COMPLETED Add more types to =quilt::cpp= canned tests                       |         |       |  0:15 |   0.3 |
 | CANCELLED Remove formatter id                                               |         |       |  0:04 |   0.1 |
-| COMPLETED Analysis around terminology in formatting space                   |         |       |  3:24 |   3.8 |
+| COMPLETED Analysis around terminology in formatting space                   |         |       |  3:24 |   3.7 |
 | COMPLETED Remove =original_model_name=                                      |         |       |  0:16 |   0.3 |
-| COMPLETED Refactor code around model origination                            |         |       |  4:08 |   4.6 |
+| COMPLETED Refactor code around model origination                            |         |       |  4:08 |   4.5 |
 | COMPLETED Remove formatter level facet folders                              |         |       |  0:06 |   0.1 |
 | COMPLETED Consider removing the "fake" primitive formatters                 |         |       |  0:01 |   0.0 |
-| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       |  3:03 |   3.4 |
-| COMPLETED Create the notion of a formatter alias                            |         |       |  3:15 |   3.6 |
+| COMPLETED Expander refactor in =quilt.cpp=                                  |         |       |  3:03 |   3.3 |
+| COMPLETED Create the notion of a formatter alias                            |         |       |  3:15 |   3.5 |
 | COMPLETED Remove enabled formatters from formatter configuration            |         |       |  0:22 |   0.4 |
-| COMPLETED Handle registration of services properly                          |         |       |  3:41 |   4.1 |
+| COMPLETED Handle registration of services properly                          |         |       |  3:41 |   4.0 |
 | COMPLETED Move stereotypes to element                                       |         |       |  0:21 |   0.4 |
 | COMPLETED Improve project banner                                            |         |       |  0:32 |   0.6 |
-| CANCELLED Add support for profiles                                          |         |       | 10:40 |  11.8 |
-| COMPLETED Refactor =yarn.dia= transformer                                   |         |       |  8:49 |   9.7 |
-| COMPLETED Create a dynamic expander in yarn                                 |         |       |  5:52 |   6.5 |
-| STARTED Merge annotations with formattables                                 |         |       |  2:35 |   2.9 |
+| CANCELLED Add support for profiles                                          |         |       | 10:40 |  11.6 |
+| COMPLETED Refactor =yarn.dia= transformer                                   |         |       |  8:49 |   9.6 |
+| COMPLETED Create a dynamic expander in yarn                                 |         |       |  5:52 |   6.4 |
+| COMPLETED Create a streaming configuration expander                         |         |       |  1:15 |   1.4 |
+| STARTED Merge annotations with formattables                                 |         |       |  2:35 |   2.8 |
 | STARTED Clean up terminology in dynamic                                     |         |       |  1:07 |   1.2 |
 | STARTED Rewrite profile support                                             |         |       |  1:26 |   1.6 |
 | STARTED Generate formatter interfaces                                       |         |       |  0:28 |   0.5 |
@@ -1327,7 +1328,9 @@ Tasks:
   the root object name) and return all dynamic objects against the
   element id.
 
-*** Create a streaming configuration expander                         :story:
+*** COMPLETED Create a streaming configuration expander               :story:
+    CLOSED: [2016-10-09 Sun 16:28]
+    CLOCK: [2016-10-09 Sun 15:13]--[2016-10-09 Sun 16:28] =>  1:15
 
 Tasks:
 
